--- a/modulos/modulo-2-ec2/notebook.ipynb
+++ b/modulos/modulo-2-ec2/notebook.ipynb
@@ -5,14 +5,78 @@
    "id": "a0e9bffd",
    "metadata": {},
    "source": [
-    " # ec2\n",
-    " ## Oque é ec2 "
+    "# Passo a Passo uso pratico ec2\n",
+    "1. Conectar na instância via SSH\n",
+    "\n",
+    "    - chmod 400 nome_da_sua_chave.pem\n",
+    "    - ssh -i \"nome_da_sua_chave.pem\" ubuntu@<IP-PÚBLICO-DA-EC2>\n",
+    "\n",
+    "\n",
+    "2. Instalar Python e Flask\n",
+    "\n",
+    "    - sudo apt update -y && sudo apt upgrade -y\n",
+    "\n",
+    "3. Criar um app Flask simples\n",
+    "    - mkdir flask_app && cd flask_app\n",
+    "    - nano app.py\n",
+    "\n",
+    " * codigo  \n",
+    "4. Abrir a porta no Security Group\n",
+    "\n",
+    "    - Volte para o console AWS → EC2 → Instâncias → Security → Security Groups\n",
+    "    - ➡️ Edite as Inbound Rules (Regras de entrada):\n",
+    "\n",
+    "    - Type: Custom TCP\n",
+    "\n",
+    "    - Port range: 5000\n",
+    "\n",
+    "    - Source: 0.0.0.0/0 (ou apenas seu IP se quiser segurança extra)\n",
+    "\n",
+    "5. Rodar o app e acessar pelo navegador\n",
+    "    - python3 app.py"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f5a693e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flask import Flask\n",
+    "\n",
+    "app = Flask(__name__)\n",
+    "\n",
+    "@app.route('/')\n",
+    "def home():\n",
+    "    return \"Olá, mundo! 🚀 Flask rodando na EC2!\"\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run(host='0.0.0.0', port=5000)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3497d0b",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "621b45b8",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.10.6)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
